--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,12 +44,12 @@
 
 
                 <div class="flex-sb-m w-full p-b-30">
-                    <div class="contact100-form-checkbox">
+                    <!--div class="contact100-form-checkbox">
                         <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
                         <label class="label-checkbox100" for="ckb1">
                             Rappeller de moi
                         </label>
-                    </div>
+                    </div-->
 
                     <div>
                         <a routerLink="/forgetPassword" class="txt1">
