--- a/src/app/Secretaire/add-aliment-prescription/add-aliment-prescription.component.css
+++ b/src/app/Secretaire/add-aliment-prescription/add-aliment-prescription.component.css
@@ -1,3 +1,11 @@
 #decaler{
     margin-left: 300px;
 }
+
+#add{
+    margin-left: 5px;
+    /*margin-bottom: -100px;*/
+    margin-top: 0px;
+    font-size: 27px;
+    color: #2A3F54;
+  }
