--- a/src/app/Secretaire/detail-suivi-prescription/detail-suivi-prescription.component.html
+++ b/src/app/Secretaire/detail-suivi-prescription/detail-suivi-prescription.component.html
@@ -11,7 +11,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Exemple de la prescription survaillance<small>&nbsp;du patient
+                            <h2>Prescription de surveillance<small>&nbsp;du&nbsp;
                                     {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</small> </h2>
                         </div>
 
