--- a/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
+++ b/src/app/Secretaire/edit-suivi-prescription/edit-suivi-prescription.component.html
@@ -11,7 +11,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Modifie la prescription survaillance du:
+                            <h2>Modifie la prescription surveillance du:
                                 <small>{{prescription?.patient?.nom}}&nbsp;{{prescription?.patient?.prenom}}</small>
                             </h2>
                         </div>
@@ -25,12 +25,12 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <button class="btn" id="add" (click)="editPatient(prescription.patient.id)"><i
+                                    <button class="btn" (click)="editPatient(prescription.patient.id)"><i
                                             class="fa fa-times"></i></button>
                                     <button class="btn" (click)="detailSuiviPrescription(prescription.id)"><i
                                             class="fa fa-file-powerpoint-o"></i>
                                     </button>
-                                    <h1 style="text-align: center;">Prescription survaillance </h1><br>
+                                    <h1 style="text-align: center;">Prescription surveillance </h1><br>
                                     <div class="col-md-6 col row">
                                         <label class="col-form-label col-md-3 col-sm-3 label-align"
                                             for="first-name">Patient
