--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="pull-right">
-        Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+        @2020&nbsp;<span style="font-size: 25px;">P/L</span> Presclib
     </div>
     <div class="clearfix"></div>
 </footer>
