--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -7,7 +7,7 @@
                     [formGroup]="forgetPwdForm" (ngSubmit)="onForgetPassword()">
                     <h1>Login Form</h1>
                     <div>
-                        <input type="text" class="form-control" placeholder="Username" name="username"
+                        <input type="text" class="form-control" placeholder="PSEUDO" name="username"
                             formControlName="username" required />
                     </div>
 
@@ -30,7 +30,7 @@
 
                         <div>
                             <div>
-                                <img src="../assets/template/images/test1.png" alt="...">
+                                <img src="../assets/template/images/test2.png" alt="...">
                             </div>
                             <p>©2020 All Rights Reserved. PrescLIB!</p>
                             <p style="color: #eeeeee;">--------------------------------------------------------
