--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -10,7 +10,7 @@
                         <p style="color: white;">Cette page que vous recherchez n'existe pas
                         </p>
                         <div class="mid_center">
-                            <h4 (click)="onLogin()">Se connecter</h4>
+                            <h4 (click)="home()" class="clickable">ACCUEIL</h4>
                         </div>
                     </div>
                 </div>
