--- a/src/app/Admin/add-service/add-service.component.html
+++ b/src/app/Admin/add-service/add-service.component.html
@@ -23,22 +23,12 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Form Design <small>different form elements</small></h2>
+                                    <h2>nouveau service</h2>
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        <li><a (click)="services()" style="font-size:17px;"><i
+                                                    class="fa fa-angle-double-left"></i></a>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                                aria-haspopup="true" aria-expanded="false"><i
-                                                    class="fa fa-wrench"></i></a>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a class="dropdown-item" href="#">Settings 1</a>
-                                                </li>
-                                                <li><a class="dropdown-item" href="#">Settings 2</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
                                     <div class="clearfix"></div>
