--- a/src/app/Admin/users/users.component.html
+++ b/src/app/Admin/users/users.component.html
@@ -21,13 +21,10 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Liste de tous les <small>Utilisateur</small></h2>
+                                    <h2>Liste de tous les <small>Utilisateurs</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
-
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
 
@@ -46,11 +43,11 @@
                                         <div class="title_right" id="bouttonSEARCH">
                                             <div class="col-md-12 col-sm-12 col-xs-12 form-group pull-right top_search">
                                                 <div class="form-group input-group">
-                                                    <input type="text" class="form-control" placeholder="Search for..."
+                                                    <input type="text" class="form-control" placeholder="chercher ..."
                                                         [(ngModel)]="motCle">
                                                     <span class="input-group-btn">
                                                         <button class="btn btn-secondary" type="button"
-                                                            (click)="chercher()">Go!
+                                                            (click)="chercher()">OK!
                                                         </button>
                                                     </span>
                                                 </div>
@@ -86,7 +83,7 @@
                                                                 <td>{{c.email}}</td>
                                                                 <td>{{c.role}}</td>
                                                                 <td>
-                                                                    <a class="btn btn-primary btn-xs"
+                                                                    <a class="btn btn-success btn-xs"
                                                                         (click)="detailUser(c.id)" title="view"><i
                                                                             class="fa fa-folder"></i> </a>
                                                                     <!--a href="#" class="btn btn-info btn-xs" (click)="editUser(c.id)"
@@ -109,7 +106,7 @@
                                                                 <td>{{c.email}}</td>
                                                                 <td>{{c.role}}</td>
                                                                 <td>
-                                                                    <a class="btn btn-primary btn-xs"
+                                                                    <a class="btn btn-success btn-xs"
                                                                         (click)="detailUser(c.id)" title="view"><i
                                                                             class="fa fa-folder"></i> </a>
                                                                     <a class="btn btn-info btn-xs"
