--- a/src/app/Secretaire/add-patient/add-patient.component.html
+++ b/src/app/Secretaire/add-patient/add-patient.component.html
@@ -14,17 +14,7 @@
                             <h3>Ajouter un patient</h3>
                         </div>
 
-                        <div class="title_right">
-                            <div class="col-md-5 col-sm-5  form-group pull-right top_search">
-                                <div class="input-group">
-                                    <div class="col-sm-12 col-12 text-right m-b-20">
-                                        <a href="addPrescription.html"
-                                            class="btn btn-primary float-right btn-rounded"><i class="fa fa-plus"></i>
-                                            Add Prescription</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="clearfix"></div>
                     <div class="row">
@@ -33,22 +23,12 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Form Design <small>different form elements</small></h2>
+                                    <h2>nouveau patient</h2>
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        <li><a (click)="patients()" style="font-size:17px;"><i
+                                                    class="fa fa-angle-double-left"></i></a>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                                aria-haspopup="true" aria-expanded="false"><i
-                                                    class="fa fa-wrench"></i></a>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a class="dropdown-item" href="#">Settings 1</a>
-                                                </li>
-                                                <li><a class="dropdown-item" href="#">Settings 2</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
                                     <div class="clearfix"></div>
@@ -114,7 +94,8 @@
                                         <div class="form-group">
                                             <label for="inputAddress2">Telephone</label>
                                             <input type="tel" id="telephone" class="form-control"
-                                                formControlName="telephone" value="1-(555)-555-5555" required>
+                                                formControlName="telephone" value="1-(555)-555-5555"
+                                                placeholder="055555555555" required>
 
                                         </div>
                                         <br>
