--- a/src/app/Secretaire/add-soin-prescription/add-soin-prescription.component.html
+++ b/src/app/Secretaire/add-soin-prescription/add-soin-prescription.component.html
@@ -10,9 +10,9 @@
             <div class="right_col" role="main">
                 <div class="">
                     <div class="page-title">
-                        <div class="title_left">
+                        <!--div class="title_left">
                             <h3>Form Elements</h3>
-                        </div>
+                        </div-->
 
 
                     </div>
