--- a/src/app/Secretaire/detail-aliment-prescription/detail-aliment-prescription.component.html
+++ b/src/app/Secretaire/detail-aliment-prescription/detail-aliment-prescription.component.html
@@ -11,7 +11,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h2>Exemple de la prescription aliment<small>&nbsp;du patient
+                            <h2>Prescription aliment<small>&nbsp;de&nbsp;
                                     {{prescription?.patient.nom}}&nbsp;{{prescription?.patient.prenom}}</small> </h2>
                         </div>
 
