--- a/src/app/Secretaire/detail-patient/detail-patient.component.html
+++ b/src/app/Secretaire/detail-patient/detail-patient.component.html
@@ -22,13 +22,20 @@
                                 <div class="x_title">
                                     <h2>Rapport <small>sur le patient</small></h2>
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
+
                                         <li *ngIf="user.role=='secretaire'"><a (click)="editPatient(patient?.id)"
                                                 title="edit">
                                                 <i class="fa fa-pencil"></i></a>
                                         </li>
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li *ngIf="user.role=='secretaire' || user.role=='medecin'"><a
+                                                (click)="patients()" style="font-size:17px;"><i
+                                                    class="fa fa-angle-double-left"></i></a>
+                                        </li>
+
+                                        <li *ngIf="user.role=='infirmier'"><a (click)="dossierSoin()"
+                                                style="font-size:17px;"><i class="fa fa-angle-double-left"></i></a>
+                                        </li>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
                                     <div class="clearfix"></div>
