--- a/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
+++ b/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
@@ -25,7 +25,7 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <button class="btn" id="add" (click)="detailPatient(prescription.patient.id)"><i
+                                    <button class="btn" (click)="editPatient(prescription.patient.id)"><i
                                             class="fa fa-times"></i>
                                     </button><br>
                                     <button class="btn" (click)="detailMedicalPrescription(prescription.id)"><i
