--- a/src/app/Secretaire/edit-patient/edit-patient.component.html
+++ b/src/app/Secretaire/edit-patient/edit-patient.component.html
@@ -11,7 +11,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Ajouter un patient</h3>
+                            <h3>Modifier un patient</h3>
                         </div>
                         <!--ownerAccount.role=='secretaire' &&-->
                         <ng-container *ngIf="patient?.etat">
@@ -50,15 +50,17 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>Form Design <small>different form elements</small></h2>
+                                    <h2>Mettre à jour le patient</h2>
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        <li><a (click)="patients()" style="font-size:17px;"><i
+                                                    class="fa fa-angle-double-left"></i></a>
                                         </li>
                                         <li><a (click)="detailPatient(id)" title="detail">
                                                 <i class="fa fa-folder"></i></a>
                                         </li>
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
+
                                     </ul>
                                     <div class="clearfix"></div>
                                 </div>
