--- a/src/app/Secretaire/edit-test/edit-test.component.html
+++ b/src/app/Secretaire/edit-test/edit-test.component.html
@@ -169,7 +169,7 @@
                                                 <div class="form-group row">
                                                     <div class="col-md-9 col-sm-9  offset-md-3">
                                                         <button type="button" class="btn btn-primary"
-                                                            (click)="return()">Annulé</button>
+                                                            (click)="return()">Quitter</button>
 
                                                         <button type="submit" [disabled]="traitementForm.invalid"
                                                             class="btn btn-success">Valider</button>
