--- a/src/app/Secretaire/patients/patients.component.html
+++ b/src/app/Secretaire/patients/patients.component.html
@@ -24,10 +24,9 @@
                                     <h2>Liste de tous les <small>Patients</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
 
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
 
@@ -46,11 +45,11 @@
                                         <div class="title_right" id="bouttonSEARCH">
                                             <div class="col-md-12 col-sm-12 col-xs-12 form-group pull-right top_search">
                                                 <div class="form-group input-group">
-                                                    <input type="text" class="form-control" placeholder="Search for..."
+                                                    <input type="text" class="form-control" placeholder="Chercher..."
                                                         [(ngModel)]="motCle">
                                                     <span class="input-group-btn">
                                                         <button class="btn btn-secondary" type="button"
-                                                            (click)="chercher()">Go!
+                                                            (click)="chercher()">OK!
                                                         </button>
                                                     </span>
                                                 </div>
