adapt nurse and doctor part

--- a/src/app/Infirmier/fiche-soin-aliment/fiche-soin-aliment.component.html
+++ b/src/app/Infirmier/fiche-soin-aliment/fiche-soin-aliment.component.html
@@ -189,10 +189,10 @@
                                                                                                             </h4>
                                                                                                             <blockquote
                                                                                                                 class="message">
-                                                                                                                Date
-                                                                                                                Injection:{{v.dateV}}<br>
-                                                                                                                Temps
-                                                                                                                Injection:{{v.timeValidation }}<br>
+                                                                                                                Servi
+                                                                                                                le:{{v.dateV}}<br>
+                                                                                                                Servi
+                                                                                                                à:{{v.timeValidation }}<br>
                                                                                                             </blockquote>
 
 
@@ -209,7 +209,7 @@
                                                                                             <div class="modal-footer">
                                                                                                 <button type="button"
                                                                                                     class="btn btn-danger"
-                                                                                                    data-dismiss="modal">Close</button>
+                                                                                                    data-dismiss="modal">Fermer</button>
                                                                                             </div>
 
                                                                                         </div>
