--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="pull-right">
-        @2020&nbsp;<span style="font-size: 25px;">P/L</span> Presclib
+        Copyright © 2020 <span>P/L</span>presclib, tous droits réservés.
     </div>
     <div class="clearfix"></div>
 </footer>
