--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <div class="menu_section">
         <h3>General</h3>
         <ul class="nav side-menu">
-            <li class="active"><a (click)="home()"><i class="fa fa-home"></i> Accueil </a>
+            <li><a (click)="home()"><i class="fa fa-home"></i> Accueil </a>
             </li>
             <li><a (click)="profileUser(user.id)"><i class="fa fa-user"></i> Profile </a>
             </li>
