--- a/src/app/Admin/users/users.component.html
+++ b/src/app/Admin/users/users.component.html
@@ -10,7 +10,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Users: </h3>
+                            <h3>Utilisateurs: </h3>
                         </div>
                     </div>
 
