--- a/src/app/Infirmier/fiche-soin-reel/fiche-soin-reel.component.html
+++ b/src/app/Infirmier/fiche-soin-reel/fiche-soin-reel.component.html
@@ -204,10 +204,10 @@
                                                                                                                 </h4>
                                                                                                                 <blockquote
                                                                                                                     class="message">
-                                                                                                                    Date
-                                                                                                                    Injection:{{v.dateV}}<br>
-                                                                                                                    Temps
-                                                                                                                    Injection:{{v.timeValidation }}<br>
+                                                                                                                    Soigné
+                                                                                                                    le:{{v.dateV}}<br>
+                                                                                                                    Soigné
+                                                                                                                    à:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -226,7 +226,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
@@ -401,10 +401,10 @@
                                                                                                                 </h4>
                                                                                                                 <blockquote
                                                                                                                     class="message">
-                                                                                                                    Date
-                                                                                                                    Injection:{{v.dateV}}<br>
-                                                                                                                    Temps
-                                                                                                                    Injection:{{v.timeValidation }}<br>
+                                                                                                                    Soigné
+                                                                                                                    le:{{v.dateV}}<br>
+                                                                                                                    Soigné
+                                                                                                                    à:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -423,7 +423,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
