--- a/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
+++ b/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
@@ -207,10 +207,10 @@
                                                                                                                 </h4>
                                                                                                                 <blockquote
                                                                                                                     class="message">
-                                                                                                                    Date
-                                                                                                                    Injection:{{v.dateV}}<br>
-                                                                                                                    Temps
-                                                                                                                    Injection:{{v.timeValidation }}<br>
+                                                                                                                    Surveiller
+                                                                                                                    le:{{v.dateV}}<br>
+                                                                                                                    Surveiller
+                                                                                                                    à:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -229,7 +229,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
@@ -415,10 +415,10 @@
                                                                                                                 </h4>
                                                                                                                 <blockquote
                                                                                                                     class="message">
-                                                                                                                    Date
-                                                                                                                    Injection:{{v.dateV}}<br>
-                                                                                                                    Temps
-                                                                                                                    Injection:{{v.timeValidation }}<br>
+                                                                                                                    Surveiller
+                                                                                                                    le:{{v.dateV}}<br>
+                                                                                                                    Surveiller
+                                                                                                                    à:{{v.timeValidation }}<br>
                                                                                                                 </blockquote>
 
 
@@ -437,7 +437,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
