--- a/src/app/Infirmier/fiche-soin/fiche-soin.component.html
+++ b/src/app/Infirmier/fiche-soin/fiche-soin.component.html
@@ -239,7 +239,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
@@ -458,7 +458,7 @@
                                                                                                     <button
                                                                                                         type="button"
                                                                                                         class="btn btn-danger"
-                                                                                                        data-dismiss="modal">Close</button>
+                                                                                                        data-dismiss="modal">Fermer</button>
                                                                                                 </div>
 
                                                                                             </div>
