--- a/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
+++ b/src/app/Infirmier/fiches-infirmier-actif/fiches-infirmier-actif.component.html
@@ -21,7 +21,7 @@
                         <div class="col-md-12 col-sm-12 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <h2>fiches infirmière du Patient: <small>{{patientName}}</small></h2>
+                                    <h2>Fiches infirmières du Patient: <small>{{patientName}}</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
 
@@ -191,25 +191,29 @@
                                                                     <li role="presentation"
                                                                         class="list-group-item py-2">
 
-                                                                        <ng-template [ngIf]="prescription.type=='SOIN'">
+                                                                        <ng-template
+                                                                            [ngIf]="prescription?.type=='SOIN'">
                                                                             <a (click)="ficheSoinReel(c.id)"
                                                                                 title="view"><i
                                                                                     class="fa fa-file-powerpoint-o"></i>
                                                                                 &nbsp;+ Fiche SOIN
                                                                             </a></ng-template>
-                                                                        <ng-template [ngIf]="prescription.type=='SUIV'">
+                                                                        <ng-template
+                                                                            [ngIf]="prescription?.type=='SUIV'">
                                                                             <a (click)="ficheSoinSuivi(c.id)"
                                                                                 title="view"><i
                                                                                     class="fa fa-file-powerpoint-o"></i>&nbsp;
                                                                                 + Fiche suivi
                                                                             </a></ng-template>
-                                                                        <ng-template [ngIf]="prescription.type=='ALMT'">
+                                                                        <ng-template
+                                                                            [ngIf]="prescription?.type=='ALMT'">
                                                                             <a (click)="ficheSoinAliment(c.id)"
                                                                                 title="view"><i
                                                                                     class="fa fa-file-powerpoint-o"></i>&nbsp;
                                                                                 + Fiche Aliment
                                                                             </a></ng-template>
-                                                                        <ng-template [ngIf]="prescription.type=='MDCL'">
+                                                                        <ng-template
+                                                                            [ngIf]="prescription?.type=='MDCL'">
                                                                             <a (click)="ficheSoin(c.id)" title="view"><i
                                                                                     class="fa fa-file-powerpoint-o"></i>&nbsp;
                                                                                 + Fiche medical
