--- a/src/app/Infirmier/file-not-completed/file-not-completed.component.html
+++ b/src/app/Infirmier/file-not-completed/file-not-completed.component.html
@@ -24,10 +24,8 @@
                                     <h2>Liste des fiches <small>NON COMPLET</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
-                                        <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                        </li>
 
-                                        <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                        <li><a class="close-link" (click)="home()"><i class="fa fa-close"></i></a>
                                         </li>
                                     </ul>
 
