--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <div class="top_nav">
     <div class="nav_menu">
         <div class="nav toggle">
-            <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+            <a id="menu_toggle"></a>
         </div>
         <nav class="nav navbar-nav">
             <ul class=" navbar-right">
@@ -13,7 +13,7 @@
                         <img alt="" [src]="this.userService.url+'/photoUser/'+user.id" />
 
 
-                        {{user.nom}} {{user.prenom}}
+                        {{user?.nom}} {{user?.prenom}}
 
                     </a>
                     <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
@@ -32,7 +32,7 @@
                         <a href="javascript:;" class="dropdown-toggle info-number" id="navbarDropdown1"
                             data-toggle="dropdown" aria-expanded="false">
                             <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-green">{{files.totalElements}}</span>
+                            <span class="badge bg-green">{{files?.totalElements}}</span>
                         </a>
 
                         <ul class="dropdown-menu list-unstyled msg_list" role="menu" aria-labelledby="navbarDropdown1">
