--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,7 @@
 
             </div>
             <div class="profile_info" id="info">
-                <span>Welcome,</span>
+                <span>Bonjour,</span>
                 <h2> {{user.prenom}}</h2>
                 <h2> {{user.nom}}</h2>
 
