addapt some funct

--- a/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
+++ b/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
@@ -174,7 +174,8 @@
                                                             <div class="block">
                                                                 <div class="block_content">
                                                                     <h2 class="title">
-                                                                        <a>{{item.nom_traitement}}</a>
+                                                                        <a>{{item.nom_traitement}}
+                                                                            &nbsp;&nbsp;<small>{{item.dosage}}&nbsp;mg</small></a>
                                                                     </h2>
 
                                                                     <div class="byline" style="margin-left: 50px;">
