--- a/src/app/Secretaire/patients/patients.component.html
+++ b/src/app/Secretaire/patients/patients.component.html
@@ -83,7 +83,7 @@
                                                                 <td>{{c.prenom}}</td>
                                                                 <td>{{ c.date_naissance | date }} </td>
                                                                 <td>{{c.telephone}}</td>
-                                                                <td>Déhospîtalisé</td>
+                                                                <td>Externe</td>
                                                                 <td>
                                                                     <a class="btn btn-success btn-xs" title="view"
                                                                         (click)="detailPatient(c.id)"><i
