--- a/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
+++ b/src/app/Infirmier/fiche-soin-suivi/fiche-soin-suivi.component.html
@@ -315,6 +315,8 @@
 
                                                                     <span
                                                                         *ngIf="ownerAccount.role=='medecin'">Afficher</span>
+                                                                    <span
+                                                                        *ngIf="ownerAccount.role=='infirmier'">Suivi</span>
                                                                 </a>
                                                             </div>
                                                             <div class="block_content">
