--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -5,9 +5,9 @@
             <section class="login_content">
                 <form data-parsley-validate class="form-horizontal form-label-left" novalidate
                     [formGroup]="forgetPwdForm" (ngSubmit)="onForgetPassword()">
-                    <h1>Login Form</h1>
+                    <h2>Recupération du mot de passe</h2>
                     <div>
-                        <input type="text" class="form-control" placeholder="PSEUDO" name="username"
+                        <input type="text" class="form-control" placeholder="Email" name="username"
                             formControlName="username" required />
                     </div>
 
