--- a/src/app/Secretaire/historique-prescription/historique-prescription.component.html
+++ b/src/app/Secretaire/historique-prescription/historique-prescription.component.html
@@ -143,7 +143,7 @@
                                                                         </a></ng-template>
 
                                                                     <ng-container
-                                                                        *ngIf="c.secretaire.id==ownerAccount.id">
+                                                                        *ngIf="c.secretaire.id==ownerAccount.id || c.medecin.id==ownerAccount.id">
                                                                         <ng-template [ngIf]="c.type=='MDCL' ">
                                                                             <a class="btn btn-primary btn-xs"
                                                                                 (click)="editMedicalPrescription(c.id)"
